tests/src/frontend/syntax/invalid/missing_semi_in_block.sk
fun main(): String {
  if (true) { void } else {void }
  "Fail"
}
